--- a/catraca/pinos.yml
+++ b/catraca/pinos.yml
@@ -1,111 +1,183 @@
-#2:(NAO USADO)
-#    gpio: 2
-#    nome: SDA
-#    modo: RST
-#    estado: HIGH 
-#3:(NAO USADO)
-#    gpio: 3
-#    nome: SCL
-#    modo: RST
-#    estado: HIGH
-4:
+2:  
+    gpio: 2
+    nome: SDA1_I2C
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+ 
+3:  
+    gpio: 3
+    nome: SCL1_I2C
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+4:  
     gpio: 4
-    nome: LIVRE_1
-    modo: OUT
+    nome: GpioPuro
+    modo: IN
     estado: LOW
-7:
+    resistor: PUD_UP
+
+5:  
+    gpio: 5
+    nome: GpioPuro
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+6:  
+    gpio: 6
+    nome: SENSOR1_GIRO
+    modo: IN
+    estado: LOW
+    resistor: PUD_DOWN
+
+7:  
     gpio: 7
-    nome: LCD_RS
+    nome: SPI0_CE0_N
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+8:  
+    gpio: 8
+    nome: SPI0_CE1_N
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+9:  
+    gpio: 9
+    nome: SPI0_MISO
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+10: 
+    gpio: 10
+    nome: SPI0_MOSI
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+11: 
+    gpio: 11
+    nome: LEDs_ESQUERDA #SPI0_SCLK
     modo: OUT
     estado: LOW
-8:
-    gpio: 8
+    #resistor: PUD_UP
+
+12: 
+    gpio: 12
+    nome: LCD_D4
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+13: 
+    gpio: 13
+    nome: SENSOR2_GIRO
+    modo: IN
+    estado: LOW
+    resistor: PUD_DOWN
+
+14: 
+    gpio: 14
+    nome: UART0_TXD
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+15: 
+    gpio: 15
+    nome: UART0_RXD
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+16: 
+    gpio: 16
     nome: LCD_E
     modo: OUT
     estado: LOW
-9:
-    gpio: 9
-    nome: OPTICA_2
-    modo: IN
-    estado: LOW
-    resistor: PUD_DOWN
-10:
-    gpio: 10
-    nome: OPTICA_1
-    modo: IN
-    estado: LOW
-    resistor: PUD_DOWN
-11:
-    gpio: 11
-    nome: SOLENOID_1
-    modo: OUT
-    estado: LOW
-#14:(NAO USADO)
-#    gpio: 14
-#    nome: TX
-#    modo: RST
-#    estado: LOW
-#15:(NAO USADO)
-#    gpio: 15
-#    nome: RX
-#    modo: RST
-#    estado: LOW
-17:
+    #resistor: PUD_UP
+
+17: 
     gpio: 17
     nome: RFID_D0
     modo: IN
     estado: LOW
     resistor: PUD_UP
     evento: FALLING
-18:
+
+18: 
     gpio: 18
+    nome: PCM_CLK
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+19: 
+    gpio: 19
+    nome: LIBERA_SOLENOIDE1
+    modo: OUT
+    estado: LOW
+    #resistor: PUD_UP
+
+20: 
+    gpio: 20
+    nome: LCD_RS
+    modo: OUT
+    estado: LOW
+    #resistor: PUD_UP
+
+21: 
+    gpio: 21
+    nome: GpioPuro
+    modo: IN
+    estado: LOW
+    resistor: PUD_UP
+
+22: 
+    gpio: 22
+    nome: LEDs_DIREITA
+    modo: OUT
+    estado: LOW
+    #resistor: PUD_UP
+
+23: 
+    gpio: 23
+    nome: LCD_D7
+    modo: OUT
+    estado: LOW
+    #resistor: PUD_UP
+
+24: 
+    gpio: 24
+    nome: LCD_D6
+    modo: OUT
+    estado: LOW
+    #resistor: PUD_UP
+
+25: 
+    gpio: 25
+    nome: LCD_D5
+    modo: OUT
+    estado: LOW
+    #resistor: PUD_UP
+
+26: 
+    gpio: 26
+    nome: LIBERA_SOLENOIDE2
+    modo: OUT
+    estado: LOW
+    #resistor: PUD_UP
+
+27: 
+    gpio: 27
     nome: RFID_D1
     modo: IN
     estado: LOW
     resistor: PUD_UP
     evento: FALLING
-22:
-    gpio: 22
-    nome: LCD_D7
-    modo: OUT
-    estado: LOW
-23:
-    gpio: 23
-    nome: LCD_D6
-    modo: OUT
-    estado: LOW
-24:
-    gpio: 24
-    nome: LCD_D5
-    modo: OUT
-    estado: LOW
-25:
-    gpio: 25
-    nome: LCD_D4
-    modo: OUT
-    estado: LOW
-27:
-    gpio: 27
-    nome: SOLENOID_2
-    modo: OUT
-    estado: LOW
-28:
-    gpio: 28
-    nome: LED_SETA_D
-    modo: OUT
-    estado: LOW
-29:
-    gpio: 29
-    nome: LED_SETA_E
-    modo: OUT
-    estado: LOW
-30:
-    gpio: 30
-    nome: LED_X
-    modo: OUT
-    estado: LOW
-31:
-    gpio: 31
-    nome: LIVRE_2
-    modo: OUT
-    estado: LOW
