Incluido o algoritmo de controle de giro

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+# Fontes compilados #
+#####################
 *.pyc
+**/*~
 
-!/log
+# Documentacao      #
+#####################
+!/documentos
 
-#/documentos
-
-!/home/pi/Catraca/catraca/telegram/tg
-
+# Logs              #
+#####################
+/log/**/*
