Atualzação de script do banco de dados.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Fontes compilados #
 #####################
 *.pyc
-**/*~
-
+*.autosave
+	
 # Documentacao      #
 #####################
 !/documentos
