--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,13 @@
 # Documentacao      #
 #####################
 !/documentos
+web/
 
 # Logs              #
 #####################
 *.log
+
+# Temp              #
+#####################
+*~
+
