Adaptado a classe Leitorcartao para as atender novas regras.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-# Fontes compilados #
+# Fontes            #
 #####################
 *.pyc
 *.autosave
+*.dia
 	
-# Documentacao      #
+# Documentos        #
 #####################
 !/documentos
-web/
 
 # Logs              #
 #####################
