--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@
 *.prx
 *.tii
 *.tis
+*.ini
+*.log
+*.db
+*.metadata
 *recommenders/*
 *.classpath
 /projeto/unicafeWin/.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/segments_3i
