--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 *.prx
 *.tii
 *.tis
+*.buildpath
+*.settings
 *recommenders/*
 *.classpath
 /projeto/unicafeWin/.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/segments_3i
