--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 *.exe
 *.log
 /projeto/unicafeWin/.recommenders/index/http___download_eclipse_org_recommenders_models_luna_
+/web/gerador/teste.php
