--- a/java/catraca_virtual/catraca_virtual/pom.xml
+++ b/java/catraca_virtual/catraca_virtual/pom.xml
@@ -57,6 +57,16 @@
 			<artifactId>jersey-client</artifactId>
 			<version>1.8</version>
 		</dependency>
+		<dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+	        <groupId>org.json</groupId>
+	        <artifactId>json</artifactId>
+	        <version>20090211</version>
+		</dependency>
     </dependencies>
 
     <build>
